[package]
edition = "2021"
name = "node-selection"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"

[target.'cfg(target_os = "macos")'.dependencies]
accessibility-sys = "0.1.3"
core-foundation = "0.9.4"

[target.'cfg(target_os = "macos")'.features]
mac_os_10_8_features = ["core-foundation-sys/mac_os_10_8_features"]

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
